# RAG

./: .gitignore  LICENSE  RAG_agent2.py  RAG_agent_infer.py  RAG_core.py  RAG_infer.py  RAG_ingest.py  RAG_spe_agent_infer.py  README.md  evaluate_agent.py  generate_data.py  main.py  pyproject.toml  requirements.txt  synthetic_rag_test_data copy.json  synthetic_rag_test_data.json
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
envRAG/: .gitignore  RAGite1.ipynb  main.py  pyproject.toml
evaluation_reports/: evaluation_report.json
