[project]
name = "envrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain[google-genai]>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-chroma>=1.0.0",
    "sentence-transformers>=5.1.2",
    "dotenv>=0.9.9",
    "pypdf>=6.1.3",
]
