[project]
name = "envrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain[google-genai]>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-chroma>=1.0.0",
    "sentence-transformers>=5.1.2",
    "dotenv>=0.9.9",
    "pypdf>=6.1.3",
    "chainlit>=2.8.4",
    "pydantic>=2.12.3",
    "arize-phoenix>=12.9.0",
    "openinference-instrumentation-langchain>=0.1.54",
    "arize-phoenix-otel>=0.13.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "deepeval>=3.3.9",
    "tiktoken>=0.12.0",
]
